fix: fixing icon and issue on mobile's size

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -101,7 +101,8 @@ img {
     justify-content: center;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    max-height: 50%;
+    min-height: 50%;
 }
 
 .pokemon-title{
@@ -146,7 +147,8 @@ img {
 
 .pokemon-about, .pokemon-base-stats, .pokemon-evolution{
     color: black;
-    height: 100%;
+    min-height: 80%;
+    max-height: 80%;
     padding: 0 3rem 0 3rem;
     font-size: 0.9rem;
     border-radius: 1rem 1rem 0 0;
@@ -158,7 +160,7 @@ img {
 }
 
 .pokemon-base-stats, .pokemon-evolution{
-    display: flex;
+    display: none;
     flex-direction: column;
 }
 
@@ -174,7 +176,7 @@ img {
 }
 
 .label-bar{
-    width: 25%;
+    width: 35%;
     text-align: right;
 }
 
@@ -247,6 +249,9 @@ img {
     }
     .section-wrapper {
         padding: 0 4rem 0 4rem;
+    }
+    .pokemon-base-stats{
+        font-size: 0.7rem;
     }
 }
 
